--- a/main.html
+++ b/main.html
@@ -8,7 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+		<ol>
+			<li data-ns-test="shopping list">Stocks</li>
+			<li data-ns-test="shopping list">MF</li>
+			<li data-ns-test="shopping list">Shares</li>
+		</ol>
+	<ul>
+		<li data-ns-test="holidaylist">Pune</li>
+		<li data-ns-test="holidaylist">Goa</li>
+		<li data-ns-test="holidaylist">America</li>
+	</ul>
 </script>
 
 </body>
