--- a/main.html
+++ b/main.html
@@ -9,17 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 		<ol>
-			<li data-ns-test="shopping list">Stocks</li>
-			<li data-ns-test="shopping list">MF</li>
-			<li data-ns-test="shopping list">Shares</li>
+			<li data-ns-test="shoppingList">Stocks</li>
+			<li data-ns-test="shoppingList">MF</li>
+			<li data-ns-test="shoppingList">Shares</li>
 		</ol>
 	<ul>
-		<li data-ns-test="holidaylist">Pune</li>
-		<li data-ns-test="holidaylist">Goa</li>
-		<li data-ns-test="holidaylist">America</li>
+		<li data-ns-test="holidayList">Pune</li>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">America</li>
 	</ul>
 </script>
-
 </body>
-
 </html>
